# vkparse

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pipe.py  pyproject.toml  sitemap.xml  tox.ini
converters/: abstract_converter.py  json_converter.py
docs/: index.md  свои_форматы.md
dumpres/: abstract_save_strategy.py  all_in_one.py  as_is_save_strategy.py  buffered_file_dumper.py  directory_save_strategy.py
models/: author.py  message.py
parsers/: abstract_parser.py  bs4_parser.py  utils.py
search/: search_index.json
vkparse/: __main__.py  local_file_loader.py  pipe.py
vkparse/converters/: abstract_converter.py  json_converter.py
vkparse/driver/: driver.py  json_driver.py
vkparse/dumpres/: abstract_save_strategy.py  all_in_one.py  as_is_save_strategy.py  buffered_file_dumper.py  directory_save_strategy.py  not_save.py  utils.py
vkparse/models/: attachment.py  author.py  message.py
vkparse/parsers/: abstract_parser.py  bs4_parser.py  utils.py
свои_форматы/: index.html
