[tool.poetry]
name = "vkparse"
version = "0.1.0"
description = "Convert VK GDPR dumps to JSON/CSV/SQLite3"
authors = ["Matthew Nekirov <matthew.nekirov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]
pyright = "^1.1.295"
ruff = "^0.0.252"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ".git/, __pycache__/, .venv/"

[tool.pyright]
exclude = [".venv"]
reportMissingImports = true
