[tool.poetry]
name = "vkparse"
version = "0.1.0"
description = "Convert VK GDPR dumps to JSON/CSV/SQLite3"
authors = ["Matthew Nekirov <matthew.nekirov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]
pyright = "^1.1.295"
ruff = "^0.0.252"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = [
    "PTH123",
    "TCH001",
    "TCH002",
    "TCH003",
    "ANN101",
    "ANN401",
    "D",
    "PD",
    "NPY"
]
line-length = 88

[tool.pyright]
exclude = [".venv"]
reportMissingImports = true
